[package]
name = "playhub-client"
version = "0.2.0"
authors = ["Kumassy <kumassyii@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playhub-proto = { version = "0.2.0", git = "https://github.com/Kumassy/playhub-proto.git" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6.8"
tokio-tungstenite = { version = '0.14', features = ["rustls"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
url = "2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
warp = "0.3"
thiserror = "1.0"
structopt = "0.3.25"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

